--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "compile": "tailwindcss -i ./src/input.css -o ./public/main.css",
+    "watch" : "tailwindcss -i ./src/input.css -o ./public/main.css --watch"
   },
   "eslintConfig": {
     "extends": [
