--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "compile": "tailwindcss -i ./src/input.css -o ./public/main.css",
-    "watch" : "tailwindcss -i ./src/input.css -o ./public/main.css --watch"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +36,8 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
   }
 }
